# Fakexomy

./: .bash_history  .bashrc  .gitconfig  .gitignore  .wget-hsts
.cache/Microsoft/DeveloperTools/: deviceid
ExoMy_Sensors/: Dockerfile  launch.sh
ExoMy_Sensors/brain/: package.xml  setup.py
ExoMy_Sensors/brain/scripts/: brain.py
ExoMy_Sensors/data_processor/: package.xml  setup.cfg  setup.py
ExoMy_Sensors/data_processor/data_processor/scripts/: imu_data_processor.py  tof_data_processor.py
ExoMy_Sensors/raw_data_publisher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ExoMy_Sensors/raw_data_publisher/raw_data_publisher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ExoMy_Sensors/raw_data_publisher/raw_data_publisher/scripts/: imu_publisher copy.py  tof_publisher.py
